// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question component Is rendered with question body 1`] = `
<div
  className="popup question"
>
  <div>
    <p
      aria-label="Question: Test entry question: Test question body"
      className="mainQuestion"
      tabIndex="0"
    >
      Test entry question
    </p>
    <p>
      Test question body
    </p>
    <button
      aria-label="After closing this dialog focus will be automatically moved to the first empty cell in the spreadsheet."
      onClick={[MockFunction]}
      tabIndex="0"
      type="button"
      value="Next"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`Question component Is rendered without question body 1`] = `
<div
  className="popup question"
>
  <div>
    <p
      aria-label="Question: Test entry question: "
      className="mainQuestion"
      tabIndex="0"
    >
      Test entry question
    </p>
    <button
      aria-label="After closing this dialog focus will be automatically moved to the first empty cell in the spreadsheet."
      onClick={[MockFunction]}
      tabIndex="0"
      type="button"
      value="Next"
    >
      Next
    </button>
  </div>
</div>
`;
